--- a/index.html
+++ b/index.html
@@ -1,64 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
-  </head>
-  <body>
-    <nav id="desktop-nav">
-      <div class="logo">Assel Cunningham</div>
-      <div>
-        <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="mediaqueries.css" />
+</head>
+
+<body>
+  <nav id="desktop-nav">
+    <div class="logo">Assel Cunningham</div>
+    <div>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  <nav id="hamburger-nav">
+    <div class="logo">AC</div>
+    <div class="hamburger-menu">
+      <div class="hamburger-icon" onclick="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
-    </nav>
-    <nav id="hamburger-nav">
-      <div class="logo">AC</div>
-      <div class="hamburger-menu">
-        <div class="hamburger-icon" onclick="toggleMenu()">
-          <span></span>
-          <span></span>
-          <span></span>
+      <div class="menu-links">
+        <li><a href="#about" onclick="toggleMenu()">About</a></li>
+        <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+        <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+        <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
-        <div class="menu-links">
-          <li><a href="#about" onclick=toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
+        </nav>
+        <section id="profile">
+          <div class="section__pic-container">
+            <img src="./assets/aselle.png" alt="AC profile pic">
+          </div>
+          <div class="section__text">
+            <!-- <p class="section__text__pq">Hello, I am</p> -->
+            <h1 class="title"> Assel Cunningham</h1>
+            <p class="section__text__p2">Computer Science x Political Science</p>
+      <p class="section__text__p3">Leveraging data-driven technologies to address complex socio-political
+        challenges</p>
+      <div class="btn-container">
+        <button class="btn btn-color-2" onclick="window.open('./assets/CV AC.pdf')">
+          Download CV</button>
+        <button class="btn btn-color-1" onclick="location.href='./#contact'">
+          Contact</button>
       </div>
-    </nav>
-    <section id="profile">
-        <div class="section__pic-container">
-            <img src="./assets/profile-pic-1.png" alt="AC profile pic">
-            </div>
-            <div class="section__text">
-                <!-- <p class="section__text__pq">Hello, I am</p> -->
-                <h1 class="title"> Assel Cunningham</h1>
-                <p class="section__text__p2">Computer Science x Political Science</p>
-                <p class="section__text__p3">I want to leverage data-driven technologies to address complex socio-political challenges</p>
-                <div class="btn-container">
-                    <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
-                    Download CV</button>
-                    <button class="btn btn-color-1" onclick="location.href='./#contact'">
-                        Contact</button>
+      <div id="socials-container">
+        <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/cunningham24/'">
+        <img src="./assets/github.png" alt="My Girhub profile" class="icon"
+          onclick="location.href='https://github.com/aqcunningham?tab=repositories'">
+        </div>
+        </div>
+        </section>
+        <section id="about">
+          <p class="about"></p>
+          <p class="section__text__p1">More about me</p>
+          <h1 class="title">About me</h1>
+          <div class="section-container">
+            <!-- <div class="section__pic-container">
+              <img src="./assets/about-pic.png" alt="Profile picture" class="about-pic">
+            </div> -->
+            <div class="about-details-container">
+              <div class="about-container">
+                <div class="details-container">
+                  <img src="./assets/experience.png" alt="Experience icon" class="icon">
+                  <h3>Experience</h3>
+                  <p>Event Coordinator</p>
+                  <p>E-commerce Manager</p>
+                  <p>Illustrator, Social Media Manager</p>
                 </div>
-                <div id="socials-container">
-                    <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='http://linkedin.com'"                </div>
-                    <img src="./assets/github.png" alt="My Girhub profile" class="icon" onclick="location.href='https://github.com/aqcunningham?tab=repositories'"                </div>
-
+                <div class="details-container">
+                  <img src="./assets/education.png" alt="Education icon" class="icon">
+                  <h3>Education</h3>
+                  <p> <b>Georgetown University</b> <br>B.A. Liberal Studies <p class="concentration">Concentration: <i>Cybersecurity, Analytics, & Technology x Politics & International Relations</i></p></p>
+                  <p> <b>Brooklyn College</b> <br>M.S. Computer Science 27/30 credits</p>
+                </div>
+              </div>
+              <div class="text-container">
+                <p>Computer Science and Political Science intersect to empower innovation in governance, policy-making, and international relations. By harnessing algorithms, AI, and large datasets, we can uncover insights into voter behavior, human rights issues, and the effectiveness of public policies, ultimately contributing to more efficient and transparent political systems.</p>
+              </div>
             </div>
-    </section>
+          </div>
+          <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='/#experience'">
+        </section>
+        <section id="experience">
+          <p class="section__text__p1">Explore My</p>
+          <h1 class="title">Experience</h1>
+          <div class="experience-details-container">
+            <div class="about-container">
+              <div class="details-container">
+                <h2 class="experience-sub-title">Frontend Development</h2>
+                <div class="article-container">
+                  <article>
+                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                    <div>
+                      <h3>HTML</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                    <div>
+                      <h3>CSS</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                    <div>
+                      <h3>JavaScript</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                    <div>
+                      <h3>SQL</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                </div>
+              </div>
+              <div class="details-container">
+                <h2 class="experience-sub-title">Backend Development</h2>
+                <div class="article-container">
+                  <article>
+                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                    <div>
+                      <h3>Python</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                    <div>
+                      <h3>Git</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                    <div>
+                      <h3>Bootstrap</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
+                    <div>
+                      <h3>Django</h3>
+                      <p>Experienced</p>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </div>
+          </div>
+          <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='/#projects'">
+        </section>
+        <section id="projects">
+          <p class="section section__text__p1">Browse My Recent</p>
+          <h1 class="title">Projects</h1>
+          <div class="experience-details-container">
+            <div class="about-container">
+              <div class="details-container color-container">
+                <div class="article-container">
+                  <img src="./assets/1.png" alt="project 1" class="project-img">
+                </div>
+                <h2 class="experience-sub-title project-title">
+                 Aula Restaurant
+                  <p>Restaurant in Djano REST Framework</p>
+                </h2>
+                <div class="btn-container">
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/aqcunningham/meta-AULA-restaurant-in-Django?tab=readme-ov-file'">
+                    Github
+                  </button>
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                    Live Demo
+                  </button>
+                </div>
+              </div>
+              <div class="details-container color-container">
+                <div class="article-container">
+                  <img src="./assets/2.png" alt="project 2" class="project-img">
+                </div>
+                <h2 class="experience-sub-title project-title">
+                 Pagination, serialization
+                  <p>JSON, XML, CSV, YAML</p>
+                </h2>
+                <div class="btn-container">
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                    Github
+                  </button>
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                    Live Demo
+                  </button>
+                </div>
+              </div>
+              <div class="details-container color-container">
+                <div class="article-container">
+                  <img src="./assets/3.png" alt="project 3" class="project-img">
+                </div>
+                <h2 class="experience-sub-title project-title">
+                  Museum website
+                  <p>Built in HTML, CSS, JS</p>
+                </h2>
+                <div class="btn-container">
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                    Github
+                  </button>
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                    Live Demo
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='/#contact'">
 
-    <script src=      "script.js"></script>
-    section
+        </section>
+        <section id="contact">
+          <p class="section section__text__p1">
+            Get In Touch
+          </p>
+          <h1 class="title">Contact Me</h1>
+          <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+              <img src="./assets/email.png" alt="Email me icon" class="icon contact-me email-icon">
+              <p><a href="mailto:ac2735@georgetown.edu">ac2735@georgetown.edu</a></p>
+            </div>
+            <div class="contact-info-container">
+              <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-me">
+              <p><a href="https://www.linkedin.com/in/cunningham24/">LinkedIn
+              </a></p>
+            </div>
+          </div>
+          </section>
 
-  </body      >
+<footer>
+  <nav>
+    <div class="nav-links-container">
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  <p>Copyright &#169; 2024 AC </p>
+</footer>
+      <script src="script.js">
+      </script>
+      </body>
 </html>
