--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <nav id="desktop-nav">
-    <div class="logo">Assel Cunningham</div>
+    <div class="logo">Aselle Cunningham</div>
     <div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
@@ -38,19 +38,16 @@
         </div>
         </nav>
         <section id="profile">
-          <div class="section__pic-container">
-            <img src="./assets/aselle.png" alt="AC profile pic">
-          </div>
           <div class="section__text">
             <!-- <p class="section__text__pq">Hello, I am</p> -->
-            <h1 class="title"> Assel Cunningham</h1>
+            <h1 class="title"> Aselle Cunningham</h1>
             <p class="section__text__p2">Computer Science x Political Science</p>
       <p class="section__text__p3">Leveraging data-driven technologies to address complex socio-political
         challenges</p>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/CV AC.pdf')">
           Download CV</button>
-        <button class="btn btn-color-1" onclick="location.href='./#contact'">
+        <button class="btn btn-color-1" onclick="location.href='#contact'">
           Contact</button>
       </div>
       <div id="socials-container">
@@ -85,7 +82,7 @@
                 </div>
               </div>
               <div class="text-container">
-                <p>Computer Science and Political Science intersect to empower innovation in governance, policy-making, and international relations. By harnessing algorithms, AI, and large datasets, we can uncover insights into voter behavior, human rights issues, and the effectiveness of public policies, ultimately contributing to more efficient and transparent political systems.</p>
+                <p class="cstext">Computer Science and Political Science intersect to empower innovation in governance, policy-making, and international relations. By harnessing algorithms, AI, and large datasets, we can uncover insights into voter behavior, human rights issues, and the effectiveness of public policies, ultimately contributing to more efficient and transparent political systems.</p>
               </div>
             </div>
           </div>
@@ -98,6 +95,7 @@
             <div class="about-container">
               <div class="details-container">
                 <h2 class="experience-sub-title">Frontend Development</h2>
+
                 <div class="article-container">
                   <article>
                     <img src="./assets/checkmark.png" alt="Experience icon" class="icon">
@@ -128,6 +126,7 @@
                     </div>
                   </article>
                 </div>
+                
               </div>
               <div class="details-container">
                 <h2 class="experience-sub-title">Backend Development</h2>
@@ -183,9 +182,9 @@
                   <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/aqcunningham/meta-AULA-restaurant-in-Django?tab=readme-ov-file'">
                     Github
                   </button>
-                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                  <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
                     Live Demo
-                  </button>
+                  </button> -->
                 </div>
               </div>
               <div class="details-container color-container">
@@ -197,12 +196,12 @@
                   <p>JSON, XML, CSV, YAML</p>
                 </h2>
                 <div class="btn-container">
-                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com/aqcunningham/RestaurantMenuAPI-Serialization'">
                     Github
                   </button>
-                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                  <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
                     Live Demo
-                  </button>
+                  </button> -->
                 </div>
               </div>
               <div class="details-container color-container">
@@ -214,12 +213,12 @@
                   <p>Built in HTML, CSS, JS</p>
                 </h2>
                 <div class="btn-container">
-                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com/aqcunningham/NewYorkMuseums'">
                     Github
                   </button>
-                  <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
+                  <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='http://github.com'">
                     Live Demo
-                  </button>
+                  </button> -->
                 </div>
               </div>
             </div>
@@ -228,9 +227,9 @@
 
         </section>
         <section id="contact">
-          <p class="section section__text__p1">
+          <!-- <p class="section section__text__p1">
             Get In Touch
-          </p>
+          </p> -->
           <h1 class="title">Contact Me</h1>
           <div class="contact-info-upper-container">
             <div class="contact-info-container">
