--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
       <p class="section__text__p3">Leveraging data-driven technologies to address complex socio-political
         challenges</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/CV AC.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./assets/AC.pdf')">
           Download CV</button>
         <button class="btn btn-color-1" onclick="location.href='#contact'">
           Contact</button>
       </div>
       <div id="socials-container">
-        <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/cunningham24/'">
+        <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon" onclick="location.href='https://www.linkedin.com/in/cunningham2735/'">
         <img src="./assets/github.png" alt="My Girhub profile" class="icon"
           onclick="location.href='https://github.com/aqcunningham?tab=repositories'">
         </div>
@@ -126,7 +126,7 @@
                     </div>
                   </article>
                 </div>
-                
+
               </div>
               <div class="details-container">
                 <h2 class="experience-sub-title">Backend Development</h2>
@@ -238,7 +238,7 @@
             </div>
             <div class="contact-info-container">
               <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-me">
-              <p><a href="https://www.linkedin.com/in/cunningham24/">LinkedIn
+              <p><a href="https://www.linkedin.com/in/cunningham2735/">LinkedIn
               </a></p>
             </div>
           </div>
