remove spaces, update cv

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="#experience">Experience</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="#writing">Writing Sample</a></li>
       </ul>
     </div>
   </nav>
@@ -70,6 +71,7 @@
                 <div class="details-container">
                   <img src="./assets/experience.png" alt="Experience icon" class="icon">
                   <h3>Experience</h3>
+                  <p>Web Development</p>
                   <p>Event Coordinator</p>
                   <p>E-commerce Manager</p>
                   <p>Illustrator, Social Media Manager</p>
